[package]
name = "async-tar"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiequire.com>", "Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/alexcrichton/tar-rs"
repository = "https://github.com/alexcrichton/tar-rs"
documentation = "https://docs.rs/async-tar"
license = "MIT/Apache-2.0"
keywords = ["tar", "tarfile", "encoding"]
readme = "README.md"
edition = "2018"
exclude = ["tests/archives/*"]

description = """
A Rust implementation of a TAR file reader and writer. This library does not
currently handle compression, but it is abstract over all I/O readers and
writers. Additionally, great lengths are taken to ensure that the entire
contents are never required to be entirely resident in memory all at once.
"""

[dependencies]
filetime = "0.2.8"
async-std = {version = "1.4.0", features = ["unstable"] }
pin-project = "0.4.6"
pin-cell = { git = "https://github.com/withoutboats/pin-cell", branch = "master" }

[dev-dependencies]
tempfile = "3"
async-std = {version = "1.4.0", features = ["unstable", "attributes"] }

[target."cfg(unix)".dependencies]
xattr = { version = "0.2", optional = true }
libc = "0.2"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[features]
default = ["xattr"]
